notebook (created on Colab)

--- a/summarisation/train_and_eval_notebook.ipynb
+++ b/summarisation/train_and_eval_notebook.ipynb
@@ -6,9 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "# Translation notebook\n",
+    "# Summarisation notebook\n",
     "\n",
-    "This is the notebook for translation\n",
+    "This is the notebook for summarisation\n",
     "\n",
     "(More descriptions)"
    ]
