--- a/summarisation/train_and_eval_notebook.ipynb
+++ b/summarisation/train_and_eval_notebook.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 3943,
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 453,
@@ -101,11 +101,11 @@
    "outputs": [],
    "source": [
     "args ={\n",
-    "    'max_input_len': 2048,  # Maximum number of tokens in the source documents, 512 for BART-base, 2048 for LED-base\n",
+    "    'max_input_len': 512,  # Maximum number of tokens in the source documents, 512 for BART-base, 2048 for LED-base\n",
     "    'max_output_len': 256,  # Maximum number of tokens in the summary\n",
-    "    'save_dir': '../models/summarisation_led2',  # Path to save the model and logs, 'models/summarisation_bart' for BART, 'models/summarisation_led' for LED\n",
+    "    'save_dir': '../models/summarisation_bart_test',  # Path to save the model and logs, 'models/summarisation_bart' for BART, 'models/summarisation_led' for LED\n",
     "    'tokenizer': 'facebook/bart-base',  # Pretrained tokenizer\n",
-    "    'model_path': 'allenai/led-base-16384',  # Pretrained model (facebook/bart-base for BART, allenai/led-base-16384)\n",
+    "    'model_path': 'facebook/bart-base',  # Pretrained model (facebook/bart-base for BART, allenai/led-base-16384)\n",
     "    'label_smoothing': 0.0, # Label smoothing (not required)\n",
     "    'epochs': 1,  # Number of epochs during training\n",
     "    'batch_size': 1,  # Batch size (1 for LED, 4 for BART)\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -160,7 +160,111 @@
     "outputId": "15da685c-dbd3-4fc6-cd5f-3be1a9c79845",
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BartConfig {\n",
+      "  \"_name_or_path\": \"facebook/bart-base\",\n",
+      "  \"activation_dropout\": 0.1,\n",
+      "  \"activation_function\": \"gelu\",\n",
+      "  \"add_bias_logits\": false,\n",
+      "  \"add_final_layer_norm\": false,\n",
+      "  \"architectures\": [\n",
+      "    \"BartModel\"\n",
+      "  ],\n",
+      "  \"attention_dropout\": 0.1,\n",
+      "  \"bos_token_id\": 0,\n",
+      "  \"classif_dropout\": 0.1,\n",
+      "  \"classifier_dropout\": 0.0,\n",
+      "  \"d_model\": 768,\n",
+      "  \"decoder_attention_heads\": 12,\n",
+      "  \"decoder_ffn_dim\": 3072,\n",
+      "  \"decoder_layerdrop\": 0.0,\n",
+      "  \"decoder_layers\": 6,\n",
+      "  \"decoder_start_token_id\": 2,\n",
+      "  \"dropout\": 0.1,\n",
+      "  \"early_stopping\": true,\n",
+      "  \"encoder_attention_heads\": 12,\n",
+      "  \"encoder_ffn_dim\": 3072,\n",
+      "  \"encoder_layerdrop\": 0.0,\n",
+      "  \"encoder_layers\": 6,\n",
+      "  \"eos_token_id\": 2,\n",
+      "  \"forced_eos_token_id\": 2,\n",
+      "  \"gradient_checkpointing\": false,\n",
+      "  \"id2label\": {\n",
+      "    \"0\": \"LABEL_0\",\n",
+      "    \"1\": \"LABEL_1\",\n",
+      "    \"2\": \"LABEL_2\"\n",
+      "  },\n",
+      "  \"init_std\": 0.02,\n",
+      "  \"is_encoder_decoder\": true,\n",
+      "  \"label2id\": {\n",
+      "    \"LABEL_0\": 0,\n",
+      "    \"LABEL_1\": 1,\n",
+      "    \"LABEL_2\": 2\n",
+      "  },\n",
+      "  \"max_position_embeddings\": 1024,\n",
+      "  \"model_type\": \"bart\",\n",
+      "  \"no_repeat_ngram_size\": 3,\n",
+      "  \"normalize_before\": false,\n",
+      "  \"normalize_embedding\": true,\n",
+      "  \"num_beams\": 4,\n",
+      "  \"num_hidden_layers\": 6,\n",
+      "  \"pad_token_id\": 1,\n",
+      "  \"scale_embedding\": false,\n",
+      "  \"task_specific_params\": {\n",
+      "    \"summarization\": {\n",
+      "      \"length_penalty\": 1.0,\n",
+      "      \"max_length\": 128,\n",
+      "      \"min_length\": 12,\n",
+      "      \"num_beams\": 4\n",
+      "    },\n",
+      "    \"summarization_cnn\": {\n",
+      "      \"length_penalty\": 2.0,\n",
+      "      \"max_length\": 142,\n",
+      "      \"min_length\": 56,\n",
+      "      \"num_beams\": 4\n",
+      "    },\n",
+      "    \"summarization_xsum\": {\n",
+      "      \"length_penalty\": 1.0,\n",
+      "      \"max_length\": 62,\n",
+      "      \"min_length\": 11,\n",
+      "      \"num_beams\": 6\n",
+      "    }\n",
+      "  },\n",
+      "  \"torch_dtype\": \"float32\",\n",
+      "  \"transformers_version\": \"4.11.3\",\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 50265\n",
+      "}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default\n",
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:488: LightningDeprecationWarning: Argument `period` in `ModelCheckpoint` is deprecated in v1.3 and will be removed in v1.5. Please use `every_n_epochs` instead.\n",
+      "  \"Argument `period` in `ModelCheckpoint` is deprecated in v1.3 and will be removed in v1.5.\"\n",
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/trainer/connectors/accelerator_connector.py:111: LightningDeprecationWarning: `Trainer(distributed_backend=dp)` has been deprecated and will be removed in v1.5. Use `Trainer(accelerator=dp)` instead.\n",
+      "  f\"`Trainer(distributed_backend={distributed_backend})` has been deprecated and will be removed in v1.5.\"\n",
+      "Using native 16bit precision.\n",
+      "GPU available: True, used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_input_len': 512, 'max_output_len': 256, 'save_dir': '../models/summarisation_bart_test', 'tokenizer': 'facebook/bart-base', 'model_path': 'facebook/bart-base', 'label_smoothing': 0.0, 'epochs': 1, 'batch_size': 1, 'grad_accum': 1, 'lr': 3e-05, 'warmup': 1000, 'gpus': 1, 'precision': 16, 'cache_dir': '../datasets/cache/', 'attention_dropout': 0.1, 'adafactor': True, 'debug': False, 'num_workers': 0, 'grad_ckpt': True, 'attention_mode': 'sliding_chunks', 'attention_window': 512, 'dataset_size': 50594}\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize with a seed\n",
     "seed = 1234\n",
@@ -169,14 +273,15 @@
     "torch.manual_seed(seed)\n",
     "if torch.cuda.is_available():\n",
     "    torch.cuda.manual_seed_all(seed)\n",
-    "    \n",
-    "# dataset size. Needed to compute number of steps for the lr scheduler\n",
-    "args['dataset_size'] = 50594 # manually entered\n",
     "\n",
     "# Define PyTorch Lightning model\n",
     "model = LmForSummarisation(args)\n",
     "# Include datasets\n",
     "model.hf_datasets = nlp.load_dataset('multi_news', cache_dir=args['cache_dir'])\n",
+    "\n",
+    "# Dataset size - needed to compute number of steps for the lr scheduler\n",
+    "# Sum of training and validation data\n",
+    "args['dataset_size'] = model.hf_datasets['train'].num_rows + model.hf_datasets['validation'].num_rows\n",
     "\n",
     "# Define logger\n",
     "logger = TestTubeLogger(\n",
@@ -188,7 +293,7 @@
     "# Define checkpoint saver\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    dirpath=os.path.join(args['save_dir'], \"training\", \"checkpoints\"),  # Dir path\n",
-    "    filename='check-{epoch:02d}',\n",
+    "    filename='check-{epoch:02d}-{validation_loss:.2f}',\n",
     "    save_top_k=1,\n",
     "    verbose=True,\n",
     "    monitor='validation_loss',\n",
@@ -284,7 +389,89 @@
     "outputId": "d49573c7-c4da-443d-db0f-27bed8453b08",
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name  | Type                         | Params\n",
+      "-------------------------------------------------------\n",
+      "0 | model | BartForConditionalGeneration | 139 M \n",
+      "-------------------------------------------------------\n",
+      "139 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "139 M     Total params\n",
+      "557.682   Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "295281cb08a141ce9229f82a9aaaf369",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation sanity check: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/trainer/data_loading.py:377: UserWarning: Your val_dataloader has `shuffle=True`, it is best practice to turn this off for val/test/predict dataloaders.\n",
+      "  f\"Your {mode}_dataloader has `shuffle=True`, it is best practice to turn\"\n",
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/trainer/data_loading.py:106: UserWarning: The dataloader, val dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  f\"The dataloader, {name}, does not have many workers which may be a bottleneck.\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'vloss': tensor(4.0420, device='cuda:0'), 'rouge1': tensor(0.3425, device='cuda:0'), 'rouge2': tensor(0.0647, device='cuda:0'), 'rougeL': tensor(0.1566, device='cuda:0'), 'rougeLsum': tensor(0.1566, device='cuda:0')}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/trainer/data_loading.py:106: UserWarning: The dataloader, train dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  f\"The dataloader, {name}, does not have many workers which may be a bottleneck.\"\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d564175aa69f4f7097ffe6c5bb26494b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: -1it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/trainer/connectors/logger_connector/result.py:406: LightningDeprecationWarning: One of the returned values {'log'} has a `grad_fn`. We will detach it automatically but this behaviour will change in v1.6. Please detach it manually: `return {'loss': ..., 'something': something.detach()}`\n",
+      "  f\"One of the returned values {set(extra.keys())} has a `grad_fn`. We will detach it automatically\"\n",
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/pytorch_lightning/plugins/precision/precision_plugin.py:141: FutureWarning: Non-finite norm encountered in torch.nn.utils.clip_grad_norm_; continuing anyway. Note that the default behavior will change in a future release to error out if a non-finite total norm is encountered. At that point, setting error_if_nonfinite=false will be required to retain the old behavior.\n",
+      "  torch.nn.utils.clip_grad_norm_(parameters, clip_val)\n",
+      "/data/jsparnel/py36_alta/lib64/python3.6/site-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
+      "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Train model\n",
     "trainer.fit(model)"
@@ -360,6 +547,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load ROUGE Scorer\n",
+    "scorer = rouge_scorer.RougeScorer(rouge_types=['rouge1', 'rouge2', 'rougeL', 'rougeLsum'], use_stemmer=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -382,7 +579,7 @@
    "outputs": [],
    "source": [
     "# Define PyTorch Lightning model\n",
-    "bart_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_bart/training/checkpoints/check-epoch00.ckpt')"
+    "bart_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_bart/training/checkpoints/check-epoch00-validation_loss.ckpt')"
    ]
   },
   {
@@ -419,7 +616,6 @@
    "outputs": [],
    "source": [
     "# ROUGE score\n",
-    "scorer = rouge_scorer.RougeScorer(rouge_types=['rouge1', 'rouge2', 'rougeL', 'rougeLsum'], use_stemmer=False)\n",
     "score = scorer.score(ground_truth, bart_summary[0])\n",
     "\n",
     "print(f'ROUGE-1: {score['rouge1'.fmeasure]}')\n",
@@ -440,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls ../models/summarisation_bart/training/checkpoints/"
+    "!ls ../models/summarisation_led/training/checkpoints/"
    ]
   },
   {
@@ -450,7 +646,7 @@
    "outputs": [],
    "source": [
     "# Define PyTorch Lightning model\n",
-    "led_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_led/training/checkpoints/check-epoch00.ckpt')"
+    "led_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_led/training/checkpoints/check-epoch00-validation_loss.ckpt')"
    ]
   },
   {
@@ -470,7 +666,6 @@
    "outputs": [],
    "source": [
     "# ROUGE score\n",
-    "scorer = rouge_scorer.RougeScorer(rouge_types=['rouge1', 'rouge2', 'rougeL', 'rougeLsum'], use_stemmer=False)\n",
     "score = scorer.score(ground_truth, led_summary[0])\n",
     "\n",
     "print(f'ROUGE-1: {score['rouge1'.fmeasure]}')\n",
