--- a/summarisation/train_and_eval_notebook.ipynb
+++ b/summarisation/train_and_eval_notebook.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 453,
@@ -101,11 +101,11 @@
    "outputs": [],
    "source": [
     "args ={\n",
-    "    'max_input_len': 512,  # Maximum number of tokens in the source documents, 512 for BART-base, 2048 for LED-base\n",
+    "    'max_input_len': 2048,  # Maximum number of tokens in the source documents, 512 for BART-base, 2048 for LED-base\n",
     "    'max_output_len': 256,  # Maximum number of tokens in the summary\n",
-    "    'save_dir': '../models/summarisation_bart_test',  # Path to save the model and logs, 'models/summarisation_bart' for BART, 'models/summarisation_led' for LED\n",
+    "    'save_dir': '../models/summarisation_led_test',  # Path to save the model and logs, 'models/summarisation_bart' for BART, 'models/summarisation_led' for LED\n",
     "    'tokenizer': 'facebook/bart-base',  # Pretrained tokenizer\n",
-    "    'model_path': 'facebook/bart-base',  # Pretrained model (facebook/bart-base for BART, allenai/led-base-16384)\n",
+    "    'model_path': 'allenai/led-base-16384',  # Pretrained model (facebook/bart-base for BART, allenai/led-base-16384)\n",
     "    'label_smoothing': 0.0, # Label smoothing (not required)\n",
     "    'epochs': 1,  # Number of epochs during training\n",
     "    'batch_size': 1,  # Batch size (1 for LED, 4 for BART)\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -165,18 +165,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BartConfig {\n",
-      "  \"_name_or_path\": \"facebook/bart-base\",\n",
-      "  \"activation_dropout\": 0.1,\n",
+      "LEDConfig {\n",
+      "  \"_name_or_path\": \"allenai/led-base-16384\",\n",
+      "  \"activation_dropout\": 0.0,\n",
       "  \"activation_function\": \"gelu\",\n",
-      "  \"add_bias_logits\": false,\n",
-      "  \"add_final_layer_norm\": false,\n",
       "  \"architectures\": [\n",
-      "    \"BartModel\"\n",
+      "    \"LEDForConditionalGeneration\"\n",
       "  ],\n",
       "  \"attention_dropout\": 0.1,\n",
+      "  \"attention_mode\": \"sliding_chunks\",\n",
+      "  \"attention_window\": [\n",
+      "    512,\n",
+      "    512,\n",
+      "    512,\n",
+      "    512,\n",
+      "    512,\n",
+      "    512\n",
+      "  ],\n",
       "  \"bos_token_id\": 0,\n",
-      "  \"classif_dropout\": 0.1,\n",
+      "  \"classif_dropout\": 0.0,\n",
       "  \"classifier_dropout\": 0.0,\n",
       "  \"d_model\": 768,\n",
       "  \"decoder_attention_heads\": 12,\n",
@@ -185,14 +192,11 @@
       "  \"decoder_layers\": 6,\n",
       "  \"decoder_start_token_id\": 2,\n",
       "  \"dropout\": 0.1,\n",
-      "  \"early_stopping\": true,\n",
       "  \"encoder_attention_heads\": 12,\n",
       "  \"encoder_ffn_dim\": 3072,\n",
       "  \"encoder_layerdrop\": 0.0,\n",
       "  \"encoder_layers\": 6,\n",
       "  \"eos_token_id\": 2,\n",
-      "  \"forced_eos_token_id\": 2,\n",
-      "  \"gradient_checkpointing\": false,\n",
       "  \"id2label\": {\n",
       "    \"0\": \"LABEL_0\",\n",
       "    \"1\": \"LABEL_1\",\n",
@@ -205,36 +209,11 @@
       "    \"LABEL_1\": 1,\n",
       "    \"LABEL_2\": 2\n",
       "  },\n",
-      "  \"max_position_embeddings\": 1024,\n",
-      "  \"model_type\": \"bart\",\n",
-      "  \"no_repeat_ngram_size\": 3,\n",
-      "  \"normalize_before\": false,\n",
-      "  \"normalize_embedding\": true,\n",
-      "  \"num_beams\": 4,\n",
+      "  \"max_decoder_position_embeddings\": 1024,\n",
+      "  \"max_encoder_position_embeddings\": 16384,\n",
+      "  \"model_type\": \"led\",\n",
       "  \"num_hidden_layers\": 6,\n",
       "  \"pad_token_id\": 1,\n",
-      "  \"scale_embedding\": false,\n",
-      "  \"task_specific_params\": {\n",
-      "    \"summarization\": {\n",
-      "      \"length_penalty\": 1.0,\n",
-      "      \"max_length\": 128,\n",
-      "      \"min_length\": 12,\n",
-      "      \"num_beams\": 4\n",
-      "    },\n",
-      "    \"summarization_cnn\": {\n",
-      "      \"length_penalty\": 2.0,\n",
-      "      \"max_length\": 142,\n",
-      "      \"min_length\": 56,\n",
-      "      \"num_beams\": 4\n",
-      "    },\n",
-      "    \"summarization_xsum\": {\n",
-      "      \"length_penalty\": 1.0,\n",
-      "      \"max_length\": 62,\n",
-      "      \"min_length\": 11,\n",
-      "      \"num_beams\": 6\n",
-      "    }\n",
-      "  },\n",
-      "  \"torch_dtype\": \"float32\",\n",
       "  \"transformers_version\": \"4.11.3\",\n",
       "  \"use_cache\": true,\n",
       "  \"vocab_size\": 50265\n",
@@ -261,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_input_len': 512, 'max_output_len': 256, 'save_dir': '../models/summarisation_bart_test', 'tokenizer': 'facebook/bart-base', 'model_path': 'facebook/bart-base', 'label_smoothing': 0.0, 'epochs': 1, 'batch_size': 1, 'grad_accum': 1, 'lr': 3e-05, 'warmup': 1000, 'gpus': 1, 'precision': 16, 'cache_dir': '../datasets/cache/', 'attention_dropout': 0.1, 'adafactor': True, 'debug': False, 'num_workers': 0, 'grad_ckpt': True, 'attention_mode': 'sliding_chunks', 'attention_window': 512, 'dataset_size': 50594}\n"
+      "{'max_input_len': 2048, 'max_output_len': 256, 'save_dir': '../models/summarisation_led_test', 'tokenizer': 'facebook/bart-base', 'model_path': 'allenai/led-base-16384', 'label_smoothing': 0.0, 'epochs': 1, 'batch_size': 1, 'grad_accum': 1, 'lr': 3e-05, 'warmup': 1000, 'gpus': 1, 'precision': 16, 'cache_dir': '../datasets/cache/', 'attention_dropout': 0.1, 'adafactor': True, 'debug': False, 'num_workers': 0, 'grad_ckpt': True, 'attention_mode': 'sliding_chunks', 'attention_window': 512, 'dataset_size': 50594}\n"
      ]
     }
    ],
@@ -396,20 +375,20 @@
      "text": [
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
-      "  | Name  | Type                         | Params\n",
-      "-------------------------------------------------------\n",
-      "0 | model | BartForConditionalGeneration | 139 M \n",
-      "-------------------------------------------------------\n",
-      "139 M     Trainable params\n",
+      "  | Name  | Type                        | Params\n",
+      "------------------------------------------------------\n",
+      "0 | model | LEDForConditionalGeneration | 161 M \n",
+      "------------------------------------------------------\n",
+      "161 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "139 M     Total params\n",
-      "557.682   Total estimated model params size (MB)\n"
+      "161 M     Total params\n",
+      "647.378   Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "295281cb08a141ce9229f82a9aaaf369",
+       "model_id": "4e8bf96b42ba4f539c200ad01d484494",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,7 +413,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'vloss': tensor(4.0420, device='cuda:0'), 'rouge1': tensor(0.3425, device='cuda:0'), 'rouge2': tensor(0.0647, device='cuda:0'), 'rougeL': tensor(0.1566, device='cuda:0'), 'rougeLsum': tensor(0.1566, device='cuda:0')}\n"
+      "{'vloss': tensor(3.1149, device='cuda:0'), 'rouge1': tensor(0.1216, device='cuda:0'), 'rouge2': tensor(0.0311, device='cuda:0'), 'rougeL': tensor(0.0811, device='cuda:0'), 'rougeLsum': tensor(0.0811, device='cuda:0')}\n"
      ]
     },
     {
@@ -448,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d564175aa69f4f7097ffe6c5bb26494b",
+       "model_id": "e4ee323fd651436baf340abce0222085",
        "version_major": 2,
        "version_minor": 0
       },
@@ -579,7 +558,7 @@
    "outputs": [],
    "source": [
     "# Define PyTorch Lightning model\n",
-    "bart_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_bart/training/checkpoints/check-epoch00-validation_loss.ckpt')"
+    "bart_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_bart/training/checkpoints/check-epoch=00-validation_loss=.ckpt')"
    ]
   },
   {
@@ -618,9 +597,9 @@
     "# ROUGE score\n",
     "score = scorer.score(ground_truth, bart_summary[0])\n",
     "\n",
-    "print(f'ROUGE-1: {score['rouge1'.fmeasure]}')\n",
-    "print(f'ROUGE-2: {score['rouge2'.fmeasure]}')\n",
-    "print(f'ROUGE-L: {score['rougeL'.fmeasure]}')"
+    "print(f'ROUGE-1: ', score['rouge1'].fmeasure)\n",
+    "print(f'ROUGE-2: ', score['rouge2'].fmeasure)\n",
+    "print(f'ROUGE-L: ', score['rougeL'].fmeasure)"
    ]
   },
   {
@@ -646,7 +625,7 @@
    "outputs": [],
    "source": [
     "# Define PyTorch Lightning model\n",
-    "led_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_led/training/checkpoints/check-epoch00-validation_loss.ckpt')"
+    "led_model = LmForSummarisation.load_from_checkpoint('../models/summarisation_led/training/checkpoints/check-epoch=00-validation_loss=.ckpt')"
    ]
   },
   {
@@ -668,9 +647,9 @@
     "# ROUGE score\n",
     "score = scorer.score(ground_truth, led_summary[0])\n",
     "\n",
-    "print(f'ROUGE-1: {score['rouge1'.fmeasure]}')\n",
-    "print(f'ROUGE-2: {score['rouge2'.fmeasure]}')\n",
-    "print(f'ROUGE-L: {score['rougeL'.fmeasure]}')"
+    "print(f'ROUGE-1: ', score['rouge1'].fmeasure)\n",
+    "print(f'ROUGE-2: ', score['rouge2'].fmeasure)\n",
+    "print(f'ROUGE-L: ', score['rougeL'].fmeasure)"
    ]
   }
  ],
