--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -98,7 +98,7 @@
     "# Create models folder\n",
     "!mkdir translation_dataset\n",
     "# Download dataset from google drive\n",
-    "dataset_link_drive = 'https://drive.google.com/uc?id=1kVEnrkcaN4NqRgpFLj7vLrwXMvoBBiBl'\n",
+    "dataset_link_drive = 'https://drive.google.com/uc?id=1MxrReEXbJPWa3OobANwfzak5rbs5kyNz'\n",
     "dataset_path = './translation_dataset/IWSLT_2014.zip'\n",
     "gdown.download(dataset_link_drive, dataset_path, quiet=False)\n",
     "!unzip './translation_dataset/IWSLT_2014.zip' -d './translation_dataset/'\n",
@@ -228,7 +228,7 @@
     "start_time = time.time()\n",
     "# Train model\n",
     "trainer.fit(model)\n",
-    "print((time.time() - start_time)/60, ' mins'"
+    "print((time.time() - start_time)/60, ' mins')"
    ]
   },
   {
@@ -265,19 +265,25 @@
     "!mkdir models\n",
     "# Download them from google drive\n",
     "# BART_base\n",
-    "bart_base_url = 'https://drive.google.com/uc?id=1g3uNMlfEO6IsOxQ_KIVnAJ5E73jAe8cN'\n",
+    "bart_base_url = 'https://drive.google.com/uc?id=1_VA85J5OOf3PltRqhbVLDuDNBtJ-9vOR'\n",
     "bart_base_out = './models/bart_base.zip'\n",
     "gdown.download(bart_base_url, bart_base_out, quiet=False)\n",
-    "!unzip './models/bart_base_url.zip' -d './models/'\n",
-    "!rm './models/bart_base_url.zip'\n",
+    "!unzip './models/bart_base.zip' -d './models/'\n",
+    "!rm './models/bart_base.zip'\n",
+    "# BART_base_with_adapter\n",
+    "bart_base_with_adapter_url = 'https://drive.google.com/uc?id=1Rojznogzr6cMGmi3wt1BeTaputmf6jv4'\n",
+    "bart_base_with_adapter_out = './models/bart_base_with_adapter.zip'\n",
+    "gdown.download(bart_base_with_adapter_url, bart_base_with_adapter_out, quiet=False)\n",
+    "!unzip './models/bart_base_with_adapter.zip' -d './models/'\n",
+    "!rm './models/bart_base_with_adapter.zip'\n",
     "# mBART_large\n",
-    "mbart_large_url = 'https://drive.google.com/uc?id=1mHS7n7og00ZD3u9TD-CpyKefvYjgvPxn'\n",
+    "mbart_large_url = 'https://drive.google.com/uc?id=115hpgCILR5FTVD-A972xVR3PdqkT9QZ7'\n",
     "mbart_large_out = './models/mbart_large.zip'\n",
     "gdown.download(mbart_large_url, mbart_large_out, quiet=False)\n",
     "!unzip './models/mbart_large.zip' -d './models/'\n",
     "!rm './models/mbart_large.zip'\n",
     "# mBART_large_with_adapter\n",
-    "mbart_large_wa_url = 'https://drive.google.com/uc?id=1kTrcD-9J8XWP-jpSwuVPN8B94XtRCZVZ'\n",
+    "mbart_large_wa_url = 'https://drive.google.com/uc?id=1tCGSk021m8aMkYEd7tm_j-Hp2fYwY5e_'\n",
     "mbart_large_wa_out = './models/mbart_large_wa.zip'\n",
     "gdown.download(mbart_large_wa_url, mbart_large_wa_out, quiet=False)\n",
     "!unzip './models/mbart_large_wa.zip' -d './models/'\n",
@@ -308,12 +314,12 @@
    "outputs": [],
    "source": [
     "print('Loading model...')\n",
-    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/BART_base_model/training/checkpoints/'\n",
-    "                                              'check-epoch=00-BLEU=36.21.ckpt')\n",
+    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/BART_base/training/checkpoints/'\n",
+    "                                              'check-epoch=00-BLEU=32.51.ckpt')\n",
     "tp_bart_base, ntp_bart_base = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_bart_base = trainer.test(model)[0]['BLEU']\n",
-    "training_time_bart_base = 8920 # 1880\n",
+    "training_time_bart_base = 2972\n",
     "inference_time_bart_base = (time.time() - start_time) / 60\n",
     "translation_example_bart_base = model.translate_example(sentence)\n",
     "print('BART_base:')\n",
@@ -331,6 +337,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Loading model...')\n",
+    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/BART_base_with_adapter/training/checkpoints'\n",
+    "                                              'check-epoch=00-BLEU=20.97.ckpt')\n",
+    "tp_bart_base_plus_adapter, ntp_bart_base_plus_adapter = model.num_parameters()\n",
+    "start_time = time.time()\n",
+    "test_bleu_bart_base_plus_adapter = trainer.test(model)[0]['BLEU']\n",
+    "training_time_bart_base_plus_adapter = 1880\n",
+    "inference_time_bart_base_plus_adapter = (time.time() - start_time) / 60\n",
+    "translation_example_bart_base_plus_adapter = model.translate_example(sentence)\n",
+    "print('BART_base_plus_adapter:')\n",
+    "print('-----------------')\n",
+    "print('Trainable parameters: ', tp_bart_base_plus_adapter)\n",
+    "print('Non-trainable parameters: ', ntp_bart_base_plus_adapter)\n",
+    "print('Total parameters: ', tp_bart_base_plus_adapter + ntp_bart_base_plus_adapter)\n",
+    "print('-----------------')\n",
+    "print('Test BLEU: ', test_bleu_bart_base_plus_adapter)\n",
+    "print('Training time: ', training_time_bart_base_plus_adapter, ' mins')\n",
+    "print('Inference time: ', inference_time_bart_base_plus_adapter, ' mins')\n",
+    "print('Translation example-> ', translation_example_bart_base_plus_adapter)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +378,7 @@
     "tp_mbart_large, ntp_mbart_large = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_mbart_large = trainer.test(model)[0]['BLEU']\n",
-    "training_time_mbart_large = 8920\n",
+    "training_time_mbart_large = 8923\n",
     "inference_time_mbart_large = (time.time() - start_time) / 60\n",
     "translation_example_mbart_large = model.translate_example(sentence)\n",
     "print('mBART_large:')\n",
@@ -395,8 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_names = ['BART_base', 'mBART_large', 'mBART_large (wa)']\n",
-    "colors = ['black', 'blue', 'green']"
+    "x_names = ['BART_base', 'BART_base (wa)', 'mBART_large', 'mBART_large (wa)']\n",
+    "colors = ['black', 'red', 'blue', 'green']"
    ]
   },
   {
@@ -407,7 +445,7 @@
    "source": [
     "# BLEU Scores\n",
     "plt.bar(x_names,\n",
-    "       [test_bleu_bart_base, test_bleu_mbart_large, test_bleu_mbart_large_plus_adapter],\n",
+    "       [test_bleu_bart_base, test_bleu_bart_base_plus_adapter, test_bleu_mbart_large, test_bleu_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "plt.ylim((30,36))\n",
     "plt.ylabel('BLEU')\n",
@@ -424,13 +462,13 @@
     "# Training time vs inference time\n",
     "fig, axs = plt.subplots(1,2, figsize=(15,5))\n",
     "axs[0].bar(x_names,\n",
-    "       [training_time_bart_base, training_time_mbart_large, training_time_mbart_large_plus_adapter],\n",
+    "       [training_time_bart_base, training_time_bart_base_plus_adapter, training_time_mbart_large, training_time_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[0].set_ylabel('mins')\n",
     "axs[0].set_xticklabels(rotation = 45)\n",
     "axs[0].set_title('training time')\n",
     "axs[1].bar(x_names,\n",
-    "       [inference_time_bart_base, inference_time_mbart_large, inference_time_mbart_large_plus_adapter],\n",
+    "       [inference_time_bart_base, inference_time_bart_base_plus_adapter, inference_time_mbart_large, inference_time_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[1].set_ylabel('mins')\n",
     "axs[1].set_xticklabels(rotation = 45)\n",
@@ -447,19 +485,19 @@
     "# Model size\n",
     "fig, axs = plt.subplots(1,3, figsize=(15,5))\n",
     "axs[0].bar(x_names,\n",
-    "       [tp_bart_base, tp_mbart_large, tp_mbart_large_plus_adapter],\n",
+    "       [tp_bart_base, tp_bart_base_plus_adapter, tp_mbart_large, tp_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[0].set_ylabel('Million')\n",
     "axs[0].set_xticklabels(rotation = 45)\n",
     "axs[0].set_title('# trainable parameters')\n",
     "axs[1].bar(x_names,\n",
-    "       [ntp_bart_base, ntp_mbart_large, ntp_mbart_large_plus_adapter],\n",
+    "       [ntp_bart_base, ntp_bart_base_plus_adapter, ntp_mbart_large, ntp_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[1].set_ylabel('Million')\n",
     "axs[1].set_xticklabels(rotation = 45)\n",
     "axs[1].set_title('# non-trainable parameters')\n",
     "axs[2].bar(x_names,\n",
-    "       [tp_bart_base + ntp_bart_base, tp_mbart_large + ntp_mbart_large, tp_mbart_large_plus_adapter + ntp_mbart_large_plus_adapter],\n",
+    "       [tp_bart_base + ntp_bart_base, tp_bart_base_plus_adapter + ntp_bart_base_plus_adapter, tp_mbart_large + ntp_mbart_large, tp_mbart_large_plus_adapter + ntp_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[2].set_ylabel('Million')\n",
     "axs[2].set_xticklabels(rotation = 45)\n",
@@ -475,6 +513,8 @@
     "# Compare translation examples\n",
     "print('BART_base:')\n",
     "print(' -> ', translation_example_bart_base)\n",
+    "print('BART_base_plus_adaptr:')\n",
+    "print(' -> ', translation_example_bart_base_plus_adapter)\n",
     "print('mBART_large:')\n",
     "print(' -> ', translation_example_mbart_large)\n",
     "print('mBART_large_plus_adapter:')\n",
